version 0.99.3 (not yet released)
           * fillcontinents was returning just last Polygon instance.
             Now returns a list of all Polygon instances.  
           * bluemarble:  pass kwargs to imshow, return Image instance.
version 0.99.2 (svn revision 6541)
           * fix drawlsmask method so that it works for cylindrical
             projections with limits outside (-180,180).
           * added 'scale' keyword to bluemarble and warpimage methods to
             downsample image background.
           * Made lat_ts default to 0 for mercator.
           * Now can specify just lon_0 for all cylindrical projections
             (to produce global map centered on lon_0).
           * Added save_background.py example, showing how to re-use
             a map background without redrawing coastlines.
           * Added embedding_map_in_wx.py example (courtesy of
             Mauro Cavalcanti).
           * Added masked array support to shiftgrid function
             (thanks to Jesper Larsen).
           * defer import of netcdf stuff till it is needed (in NetCDFFile
             function).
           * Added McBryde-Thomas Flat Polar Quartic (projection =
             'mbtfpq'), Gall Stereographic Cylindrical (projection =
             'gall') and van der Grinten (projection = 'vandg').
           * fix bugs in warpimage and bluemarble methods for several projections.
           * bugfix patch for rotate_vector from David Huard.  David
             also contributed the beginnings of a test suite.
           * make sure scatter method sets pyplot color mappable.
           * added cubed_sphere example.
           * updated NetCDFFile to use pupynere 1.0.2 (now can write as well
             as read!).
           * now works with geos version 3.
           * added "proj4string" Basemap instance variable.
           * testgdal example now uses gdal to read topo data from a raster
             DEM file and ogr to read state boundaries from a shape file.